@@ -1640,8 +1640,14 @@ Example : trailto everyarea\n\r\
 Example : trailto confirm areanames "ignorerooms=myarea#10,myarea#20" everyarea\n\r\
 Short(s): \n\r\
 This command shows the directions one must travel to get from their current \
-position to the destination given.
-	
+position to the destination given. You can end the areas with 'areanames', 'ignorerooms=', \
+and 'confirm!' flags.  You can also include one of these flags: NOHOMES, OPENONLY, \
+UNLOCKEDONLY, AREAONLY, NOHIDDENAREAS, NOEMPTYGRIDS, NOAIR, NOWATER, WATERSURFACEONLY, \
+UNDERWATERONLY, FLOORSONLY, CEILINGSSONLY, NOCLIMB, NOCRAWL, OUTDOORONLY, FALLBACK, \
+RADIUS=X, or MINSIZE=X. MINSIZE will change the minimum area size for use with EVERYAREA, \
+FALLBACK will remove flags in reverse order until a trail is found. RADIUS changes the \
+width of the space to look for trails in.
+
 TYPO=\
 Command : TYPO\n\r\
 Usage   : TYPO [MESSAGE]/REVIEW (STARTING MSG)\n\r\
